--- a/Client/Website/src/app/pages/guest/profile/profile.component.html
+++ b/Client/Website/src/app/pages/guest/profile/profile.component.html
@@ -1,1 +1,19 @@
-<p>profile works!</p>
+
+<div style="background-color: #14274A;">
+
+<div>
+    <app-nav-bar style="position: relative;"></app-nav-bar>
+    <button class="edit-button">Edit Profile</button>
+    <button class="change-pass-button">Change Password</button>
+</div>
+
+
+<div>
+    <h1 class="user">Charbel Gerges</h1>
+    <hr style="width: 30%;margin-top: 0px;">
+    <button class="promo-code-button">Apply Promo Code</button>
+</div>
+
+
+<app-footer></app-footer>
+</div>
