--- a/Client/Website/src/app/pages/guest/profile/profile.component.html
+++ b/Client/Website/src/app/pages/guest/profile/profile.component.html
@@ -14,6 +14,36 @@
     <button class="promo-code-button">Apply Promo Code</button>
 </div>
 
+<div class="profile-container">
+    <h1 class="orders-title">My Orders</h1>
+    <hr style="width: 16%;margin: 0px 0px 16px 16px">
+    <div class="orders-container">
+        <div style="position: relative;padding: 20px;">
+            <img class="order-img" src="../../../../assets/burger.png">
+            <h4 class="order-title">Wed 3 February</h4>
+        </div>
+        <div style="position: relative;padding: 20px;">
+            <img class="order-img" src="../../../../assets/burger.png">
+            <h4 class="order-title">Wed 3 February</h4>
+        </div>
+        <div style="position: relative;padding: 20px;">
+            <img class="order-img" src="../../../../assets/burger.png">
+            <h4 class="order-title">Wed 3 February</h4>
+        </div>
+        <div style="position: relative;padding: 20px;">
+            <img class="order-img" src="../../../../assets/burger.png">
+            <h4 class="order-title">Wed 3 February</h4>
+        </div>
+        <div style="position: relative;padding: 20px;">
+            <img class="order-img" src="../../../../assets/burger.png">
+            <h4 class="order-title">Wed 3 February</h4>
+        </div>
+        <div style="position: relative;padding: 20px;">
+            <img class="order-img" src="../../../../assets/burger.png">
+            <h4 class="order-title">Wed 3 February</h4>
+        </div>
+    </div>
+</div>
 
 <app-footer></app-footer>
 </div>
