Worked on Displaying Activity Components🪂
1. Design, Implement and Link Services Page
2. 10
3. Displaying activity components on the services page.

--- a/Client/Website/src/app/components/activity/activity-list-item/activity-list-item.component.html
+++ b/Client/Website/src/app/components/activity/activity-list-item/activity-list-item.component.html
@@ -51,7 +51,7 @@
                     <tr>
                         <td style="width: 50%;">
                             <p class="title-2">
-                                USD {{formatTotalPrice}}
+                                {{formatTotalPrice}}
                             </p>
                         </td>
                         <td>
