--- a/Client/Website/src/app/components/activity/activity-list-item/activity-list-item.component.html
+++ b/Client/Website/src/app/components/activity/activity-list-item/activity-list-item.component.html
@@ -9,7 +9,7 @@
         <td style="padding: 16px; height:80vh;">
 
             <img style="vertical-align: middle; object-fit: cover;" width="100%" height="100%"
-                src="../../../assets/activity-1.png">
+                src="../../../assets/activity-1.jpg">
 
         </td>
         <td style="padding: 16px; height: 80vh;  width: 40%; resize: none;">
