Added the Booking Component🤷‍♂️
1. Design, Implement and Link Profile
2. 10
3. Created the booking component and module, and inserted it into the profile page.

--- a/Client/Website/src/app/pages/guest/profile/profile.component.html
+++ b/Client/Website/src/app/pages/guest/profile/profile.component.html
@@ -15,7 +15,7 @@
 </div>
 
 <div class="profile-container">
-    <h1 class="orders-title">My Orders</h1>
+    <h1 class="page-titles">My Orders</h1>
     <hr style="width: 16%;margin: 0px 0px 16px 16px">
     <div class="orders-container">
         <div style="position: relative;padding: 20px;">
@@ -43,6 +43,12 @@
             <h4 class="order-title">Wed 3 February</h4>
         </div>
     </div>
+</div>
+
+<div >
+    <h1 class="page-titles">My Bookings</h1>
+    <hr style="width: 16%;margin: 0px 0px 16px 16px">
+    <app-booking-details></app-booking-details>
 </div>
 
 <app-footer></app-footer>
