--- a/Client/Website/src/app/pages/guest/profile/profile.component.scss
+++ b/Client/Website/src/app/pages/guest/profile/profile.component.scss
@@ -40,7 +40,7 @@
     margin-bottom: 4px;
 }
 
-.orders-title {
+.page-titles {
     color: white;
     font-family: 'Robotto';
     font-weight: 400;
