Improved the interaction with the db component🍴
1. Design, Implement and Link Restaurant Page
2. 10
3. Integrated the Food ingredients system with the database component

--- a/Client/Website/src/app/components/database/change/change.component.html
+++ b/Client/Website/src/app/components/database/change/change.component.html
@@ -171,9 +171,7 @@
                                         class="input"
                                         *ngFor="let type of outer_data[field.outer_choices.index!] | keyvalue"
                                         [value]="field.outer_choices.key ? field.outer_choices.key([type.key, type.value]) : type.key">
-                                        {{field.outer_choices.format ?
-                                        field.outer_choices.format(type.value) :
-                                        type.value}}
+                                        {{formatOuterChoice(field, type)}}
                                     </mat-option> </mat-select>
                             </mat-form-field>
 
