Designed the header of the menu page🍴
1. Design, Implement and Link Restaurant Page
2. 10
3. Started the first design phase of the menu page

--- a/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.html
+++ b/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.html
@@ -1,2 +1,39 @@
-<app-nav-bar></app-nav-bar>
-<app-footer></app-footer>
+<div class="main">
+
+    <app-nav-bar></app-nav-bar>
+    <p class="title">Menu</p>
+    <hr style="margin-left: 10%; margin-right: 10%; border-color: white;">
+
+    <div class="section">
+
+        <div class="wrap">
+            <img width="100%" src="../../../../../assets/starters-main.png" />
+            <div class="content">
+                Starters
+            </div>
+        </div>
+
+        <div class="wrap">
+            <img width="100%" src="../../../../../assets/platters-main.png" />
+            <div class="content">
+                Platters
+            </div>
+        </div>
+
+        <div class="wrap">
+            <img width="100%" src="../../../../../assets/salads-main.png" />
+            <div class="content">
+                Salads
+            </div>
+        </div>
+
+        <div class="wrap">
+            <img width="100%" src="../../../../../assets/desserts-main.png" />
+            <div class="content">
+                Desserts
+            </div>
+        </div>
+    </div>
+
+    <app-footer></app-footer>
+</div>
