--- a/Client/Website/src/app/components/food/food-list-item/food-list-item.component.html
+++ b/Client/Website/src/app/components/food/food-list-item/food-list-item.component.html
@@ -1,63 +1,28 @@
 <table class="main">
     <tr>
-        <td colspan="2">
+        <td style="padding: 16px; width: 20%;" rowspan="2">
+
+            <img style="vertical-align: middle; object-fit: cover;" width="256vh" height="256vh"
+                [src]="image">
+
+        </td>
+        <td>
 
             <div class="label">{{name}}</div>
         </td>
     </tr>
     <tr>
-        <td style="padding: 16px; height:80vh;">
-
-            <img style="vertical-align: middle; object-fit: cover;" width="100%" height="100%"
-                src="../../../assets/food-1.png">
-
-        </td>
-        <td style="padding: 16px; height: 80vh;  width: 40%; resize: none;">
+        <td style="padding: 16px; width: 80%; resize: none;">
             <div style="vertical-align: middle;  margin: 0px;">
-                <p class="title-1">Description</p>
                 <mat-divider style="border-top-color: #14274A"></mat-divider>
-                <br>
-                <br>
                 <p class="content-1">
-                    Description:
-                </p>
-                <p class="content-2">
                     {{description}}
                 </p><br>
-                <br>
-                <p class="content-1">
-                    Price:
-                </p>
                 <p class="content-2">
                     {{formatPrice}}
-                </p><br>
-                <p class="content-1">
-                    Quantity:
                 </p>
-                <button (click)="changeQuantity(-1)" class="quantity_btn">-</button>
-                <p style="display: inline;" class="content-2">
-                    {{quantity}}
-                </p>
-                <button (click)="changeQuantity(1)" class="quantity_btn">+</button>
-                <br><br>
-                <p class="content-1">
-                    Total:
-                </p>
-                <table style="padding: 0px; width: 100%;">
-                    <tr>
-                        <td style="width: 50%;">
-                            <p class="title-2">
-                                USD {{formatTotalPrice}}
-                            </p>
-                        </td>
-                        <td>
-                            <p class="cancel-btn">
-                                Add to Cart
-                            </p>
-                        </td>
-                    </tr>
-                </table>
             </div>
         </td>
     </tr>
 </table>
+<hr style="border-color: white; margin-left: 10%; margin-right: 10%;">
