--- a/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.html
+++ b/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.html
@@ -35,5 +35,17 @@
         </div>
     </div>
 
-    <app-footer></app-footer>
+    <div *ngFor="let category of food_categories | keyvalue">
+
+        <p class="title-2">{{category.value.label}}</p>
+
+        <ng-container *ngFor="let food of foods | keyvalue">
+            
+            <div *ngIf="food.value.category == category.key">
+                <app-food-list-item [description]="food.value.description" [name]="food.value.label" [price]="food.value.price"></app-food-list-item>
+            </div>
+        </ng-container>
+        
+    </div>
+    <app-footer [alt_color]="'1#14274A'"></app-footer>
 </div>
