Created some hover effects🍴
1. Design, Implement and Link Restaurant Page
2. 10
3. Added some transitions to make the hovering smoother and more concrete

--- a/Client/Website/src/app/components/food/food-list-item/food-list-item.component.html
+++ b/Client/Website/src/app/components/food/food-list-item/food-list-item.component.html
@@ -14,7 +14,7 @@
     <tr>
         <td style="padding: 16px; width: 80%; resize: none;">
             <div style="vertical-align: middle;  margin: 0px;">
-                <mat-divider style="border-top-color: #14274A"></mat-divider>
+                <mat-divider style="border-top-color: white"></mat-divider>
                 <p class="content-1">
                     {{description}}
                 </p><br>
