--- a/Client/Website/src/app/components/food/food-list-item/food-list-item.component.scss
+++ b/Client/Website/src/app/components/food/food-list-item/food-list-item.component.scss
@@ -7,6 +7,8 @@
     // // height: 50%;
     // background-color: white;
 
+    transition: background-color 0.2s, color 0.2s;
+
     background-color: #14274A;
     color: white
 
@@ -15,7 +17,7 @@
 .main:hover {
 
     background-color: white;
-    color: #14274A
+    color: #14274a
 
 }
 
