--- a/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.scss
+++ b/Client/Website/src/app/pages/guest/restaurant/menu/menu.component.scss
@@ -55,6 +55,7 @@
 }
 
 .wrap::before {
+
     content: "";
     position: absolute;
     top: 0;
@@ -62,8 +63,15 @@
     right: 0;
     margin: 32px;
     bottom: 0;
-    background-color: rgba(217, 217, 217, 0.3);
+    background-color: rgba(217, 217, 217, 0.4);
     z-index: 1;
+}
+
+.wrap:hover::before {
+    
+    background-color: rgba(120, 120, 120, 0.3);
+    
+
 }
 
 .wrap img+.content {
