Implemented Activity Overview Logic🪂
1. Design, Implement and Link Services Page
2. 10
3. Implemented logic.

--- a/Client/Website/src/app/components/activity/activity-list-item/activity-overview/activity-overview.component.html
+++ b/Client/Website/src/app/components/activity/activity-list-item/activity-overview/activity-overview.component.html
@@ -22,7 +22,7 @@
                     Date:
                 </p>
                 <p class="content-2">
-                    {{formatRange}}
+                    <!-- {{formatRange}} -->
                 </p>
                 <br><br>
                 <p class="content-1">
