Cleaned the Design Code🛖
1. Design, Implement Home Page and Link News Feed
2. 9
3. Made some minor changes to clean the design's html and scss code.

--- a/Client/Website/src/app/pages/guest/home/home.component.html
+++ b/Client/Website/src/app/pages/guest/home/home.component.html
@@ -16,7 +16,7 @@
     </div>
     <div>
         <table class="body_table_properties">
-            <tr class="row_spacer">
+            <tr style="height: 35px;">
             </tr>
             <tr>
                 <td class="body_left_col">
@@ -33,13 +33,14 @@
                         </p>
                     </div>
                 </td>
-                <td class="col_spacer">
+                <td style="width: 30px;">
+                    <!-- for spacing -->
                 </td>
                 <td class="body_right_col2">
                 </td>
             </tr>
 
-            <tr class="row_spacer">
+            <tr style="height: 35px;">
             </tr>
             <tr>
                 <td class="body_left_col">
@@ -58,7 +59,7 @@
                         </p>
                     </div>
                 </td>
-                <td class="col_spacer">
+                <td style="width: 30px;">
                 </td>
                 <td class="body_right_col1">
                 </td>
@@ -66,4 +67,7 @@
         </table>
     </div>
 </div>
-<app-footer main_color="#14274a" alt_color="white" font_color="white"></app-footer>
+
+<div style="margin-top: 20px;">
+    <app-footer main_color="#14274a" alt_color="white" font_color="white"></app-footer>
+</div>
