Fixed a Mistake and Created Activity Details Component🤷‍♂️
1. Design, Implement and Link Profile
2. 10
3. Created the activity details component and module, and inserted it into the profile page. Added the cancel button.

--- a/Client/Website/src/app/pages/guest/profile/booking-details/booking-details.component.html
+++ b/Client/Website/src/app/pages/guest/profile/booking-details/booking-details.component.html
@@ -11,6 +11,9 @@
         <h4 class="properties-title">Occupancy:</h4>
         <p class="properties-info"> 2 adults + 1 child or 3 adults</p>
         <h4 class="properties-total">Total:</h4>
-        <h3 class="properties-price">USD 3450</h3>
+        <div style="display: flex;">
+            <h3 class="properties-price">USD 3450</h3>
+            <button class="cancel-button">Cancel</button>
+        </div>
     </div>
 </div>
