--- a/Client/Website/src/app/pages/guest/profile/booking-details/booking-details.component.scss
+++ b/Client/Website/src/app/pages/guest/profile/booking-details/booking-details.component.scss
@@ -70,3 +70,12 @@
     margin-top: 0px;
 
 }
+
+.cancel-button{
+    color: #14274A;
+    width: 200px;
+    height: 50px;
+    margin-left: 25px;
+    font-size: 15px;
+    text-transform: uppercase;
+}
