--- a/Client/Website/src/app/pages/guest/profile/profile.component.html
+++ b/Client/Website/src/app/pages/guest/profile/profile.component.html
@@ -50,6 +50,11 @@
     <hr style="width: 16%;margin: 0px 0px 16px 16px">
     <app-booking-details></app-booking-details>
 </div>
+<div >
+    <h1 class="page-titles">My Activities</h1>
+    <hr style="width: 16%;margin: 0px 0px 16px 16px">
+    <app-activity-details></app-activity-details>
+</div>
 
 <app-footer></app-footer>
 </div>
