Finished the Design of Activity Details🤷‍♂️
1. Design, Implement and Link Profile
2. 10
3. Added the activity label and fixed a few bugs related to divs.

--- a/Client/Website/src/app/pages/guest/profile/activity-details/activity-details.component.html
+++ b/Client/Website/src/app/pages/guest/profile/activity-details/activity-details.component.html
@@ -1,9 +1,13 @@
-<div class="bookings-container">
-    <img class="details-pic" src="../../../../../assets/party.png">
+<div class="activities-container">
+    <div class="pic-container">
 
-    <div class="booking-info">
+        <img class="details-pic" src="../../../../../assets/party.png">
+        <h2 class="pic-label">VOID</h2>
+    </div>
+ 
+    <div class="activity-info">
 
-        <h2 class="booking-title">Partying</h2>
+        <h2 class="activity-title">Partying</h2>
 
         <h4 class="properties-title">Description:</h4>
         <p class="properties-info"> It is a time to let loose, relax, and have fun with friends, family, or colleagues. Parties can range from small, intimate gatherings to large, extravagant events with music, food, and entertainment.</p>
@@ -15,4 +19,5 @@
             <button class="cancel-button">Cancel</button>
         </div>
     </div>
+    
 </div>
