--- a/Client/Website/src/app/pages/guest/profile/activity-details/activity-details.component.scss
+++ b/Client/Website/src/app/pages/guest/profile/activity-details/activity-details.component.scss
@@ -92,6 +92,9 @@
     color: #14274A;
     background-color: white;
     bottom: 2%;
-    left: 50%;
+    left: 45%;
+    width: 200px;
+    text-align: center;
+    padding: 5px;
 
 }
