Fixed Major Error🪂
1. Design, Implement and Link Services Page
2. 10
3. Fixed Major Error in displaying activities.

--- a/Client/Website/src/app/pages/guest/services/services.component.html
+++ b/Client/Website/src/app/pages/guest/services/services.component.html
@@ -21,7 +21,7 @@
             style="margin-right: 64px; margin-left: 64px; margin: 16px; border-top-color: #14274a40"></mat-divider>
     </div>
 </div>
-<app-carousel>
+<!-- <app-carousel>
     <ng-container *ngFor="let activity of activities | keyvalue; let i = index">
         <ng-container *carouselItem>
             <app-activity-list-item style="width: 100%;
@@ -31,4 +31,4 @@
                 ></app-activity-list-item>
         </ng-container>
     </ng-container>
-</app-carousel>
+</app-carousel> -->
