--- a/Client/Website/src/app/components/activity/activity-list-item/activity-list-item.component.html
+++ b/Client/Website/src/app/components/activity/activity-list-item/activity-list-item.component.html
@@ -2,7 +2,7 @@
     <tr>
         <td colspan="2">
 
-            <div class="label">{{title}}</div>
+            <div class="label">{{activity?.value?.title}}</div>
         </td>
     </tr>
     <tr>
@@ -22,26 +22,26 @@
                     Description:
                 </p>
                 <p class="content-2">
-                    {{description}}
+                    {{activity?.value?.description}}
                 </p><br>
                 <br>
                 <p class="content-1">
                     Price:
                 </p>
                 <p class="content-2">
-                    USD {{formatPrice}}
+                    {{formatPrice}}
                 </p><br>
                 <p class="content-1">
                     Start Date:
                 </p>
                 <p class="content-2">
-                     {{start_date}}
+                     {{activity?.value?.start_date}}
                 </p><br>
                 <p class="content-1">
                     End Date:
                 </p>
                 <p class="content-2">
-                     {{end_date}}
+                     {{activity?.value?.end_date}}
                 </p><br>
                 <br><br>
                 <p class="content-1">
@@ -51,7 +51,7 @@
                     <tr>
                         <td style="width: 50%;">
                             <p class="title-2">
-                                {{formatTotalPrice}}
+                                <!-- {{formatTotalPrice}} -->
                             </p>
                         </td>
                         <td>
