--- a/Client/Website/src/app/pages/guest/home/home.component.html
+++ b/Client/Website/src/app/pages/guest/home/home.component.html
@@ -15,56 +15,7 @@
         <hr class="line">
     </div>
     <div>
-        <!-- <table class="body_table_properties">
-            <tr style="height: 35px;">
-            </tr>
-            <tr>
-                <td class="body_left_col">
-                    <p class="body_table_header">It all starts at 10:35PM</p>
-                    <p class="body_table_content">We’ve collaborated with global superstars Tiësto and Tate McRae to
-                        create the track and music video “10:35”, which is inspired by the essence, energy and
-                        electricity of Purple Motel.</p>
-                    <div>
-                        <button class="button">
-                            Learn More
-                        </button>
-                        <p class="likes">
-                            xx Likes
-                        </p>
-                    </div>
-                </td>
-                <td style="width: 30px;"> -->
-                    <!-- for spacing -->
-                <!-- </td>
-                <td class="body_right_col2">
-                </td>
-            </tr>
-
-            <tr style="height: 35px;">
-            </tr>
-            <tr>
-                <td class="body_left_col">
-                    <p class="body_table_header">Leave your worries in the sand</p>
-                    <p class="body_table_content">We love life at the beach. Being close
-                        to the ocean with access to endless sandy
-                        beach ensures a relaxed state of mind. It
-                        seems like time stands still watching the
-                        ocean. </p>
-                    <div>
-                        <button class="button">
-                            Learn More
-                        </button>
-                        <p class="likes">
-                            xx Likes
-                        </p>
-                    </div>
-                </td>
-                <td style="width: 30px;">
-                </td>
-                <td class="body_right_col1">
-                </td>
-            </tr>
-        </table> -->
+        <app-news-list-item></app-news-list-item>
     </div>
 </div>
 
