--- a/Client/Website/src/app/components/activity/activity-list-item/activity-list-item.component.html
+++ b/Client/Website/src/app/components/activity/activity-list-item/activity-list-item.component.html
@@ -35,15 +35,24 @@
                     Start Date:
                 </p>
                 <p class="content-2">
-                     {{activity?.value?.start_date}}
+                    {{activity?.value?.start_date}}
                 </p><br>
                 <p class="content-1">
                     End Date:
                 </p>
                 <p class="content-2">
-                     {{activity?.value?.end_date}}
+                    {{activity?.value?.end_date}}
                 </p><br>
-                <br><br>
+                <br>
+                <p class="content-1">
+                    Seats:
+                </p><br>
+                <button (click)="changeQuantity(-1)" class="quantity_btn">-</button>
+                <p style="display: inline;" class="content-2">
+                    {{seats}}
+                </p>
+                <button (click)="changeQuantity(1)" class="quantity_btn">+</button>
+                <br>
                 <p class="content-1">
                     Total:
                 </p>
