--- a/Client/Website/src/app/components/activity/activity-list-item/activity-list-item.component.html
+++ b/Client/Website/src/app/components/activity/activity-list-item/activity-list-item.component.html
@@ -23,7 +23,7 @@
                 </p>
                 <p class="content-2">
                     {{activity?.value?.description}}
-                </p><br>
+                </p>
                 <br>
                 <p class="content-1">
                     Price:
@@ -42,20 +42,23 @@
                 </p>
                 <p class="content-2">
                     {{activity?.value?.end_date}}
-                </p><br>
+                </p>
                 <br>
                 <p class="content-1">
                     Seats:
-                </p><br>
+                </p>
                 <button (click)="changeQuantity(-1)" class="quantity_btn">-</button>
                 <p style="display: inline;" class="content-2">
                     {{seats}}
                 </p>
                 <button (click)="changeQuantity(1)" class="quantity_btn">+</button>
                 <br>
-                <p class="content-1">
+                <p *ngIf="seats!=0" class="content-1">
                     Total:
                 </p>
+                <p class="content-2">
+                    {{formatTotalPrice}}
+                </p><br>
                 <table style="padding: 0px; width: 100%;">
                     <tr>
                         <td style="width: 50%;">
