Worked on the Carousel Displaying Activities🪂
1. Design, Implement and Link Services Page
2. 10
3. Worked on the carousel display.

--- a/Client/Website/src/app/pages/guest/services/services.component.html
+++ b/Client/Website/src/app/pages/guest/services/services.component.html
@@ -32,3 +32,13 @@
         </ng-container>
     </ng-container>
 </app-carousel> -->
+
+<app-carousel #carousel>
+    <ng-container *ngFor="let activity of activities | keyvalue; let i = index">
+        <ng-container *carouselItem>
+            <app-activity-list-item style="width: 100%; display: flex; position: relative;" 
+            [@fadeOut] [end_date]="activity.value.end_date" [start_date]="activity.value.start_date"
+            [activity]="activity" ></app-activity-list-item>
+        </ng-container>
+    </ng-container>
+</app-carousel>
