Fixed a few proportions🤷‍♂️
1. Design, Implement and Link Profile
2. 10
3. Fixed a few proportions and sizes in the profile page

--- a/Client/Website/src/app/pages/guest/profile/activity-details/activity-details.component.html
+++ b/Client/Website/src/app/pages/guest/profile/activity-details/activity-details.component.html
@@ -8,6 +8,7 @@
     <div class="activity-info">
 
         <h2 class="activity-title">Partying</h2>
+        <hr style="width: 90%; margin-left: 32px; margin-right: 32px;">
 
         <h4 class="properties-title">Description:</h4>
         <p class="properties-info"> It is a time to let loose, relax, and have fun with friends, family, or colleagues. Parties can range from small, intimate gatherings to large, extravagant events with music, food, and entertainment.</p>
