--- a/Client/Website/src/app/pages/guest/profile/booking-details/booking-details.component.html
+++ b/Client/Website/src/app/pages/guest/profile/booking-details/booking-details.component.html
@@ -5,6 +5,7 @@
     <div class="booking-info">
 
         <h2 class="booking-title">Booking Details</h2>
+        <hr style="width: 90%; margin-left: 32px; margin-right: 32px;">
 
         <h4 class="properties-title">Date:</h4>  
         <p class="properties-info">Tue 14 February - Wed 15 February</p>
