--- a/Client/Website/src/app/components/general/nav-bar/nav-bar.component.html
+++ b/Client/Website/src/app/components/general/nav-bar/nav-bar.component.html
@@ -50,7 +50,7 @@
 
 
     </table>
-    <div style="margin: -30px; float: right;">
+    <div *ngIf="!hide_auth" style="margin: -30px; float: right;">
         <p (click)="login()" style="padding-right: 16px;" class="title-4">{{"login" | translate}}</p>
         <p (click)="signUp()" style="padding-left: 16px;" class="title-4">{{"sign_up" | translate}}</p>
     </div>
