--- a/Client/Website/src/app/pages/guest/profile/activity-details/activity-details.component.scss
+++ b/Client/Website/src/app/pages/guest/profile/activity-details/activity-details.component.scss
@@ -28,7 +28,7 @@
 
 .properties {
     align-self: flex-start;
-    margin-left: 20px;
+    margin-left: 32px;
 }
 
 .activity-title {
@@ -37,31 +37,44 @@
     font-weight: 100;
     font-family: 'Robotto';
     font-size: 40px;
-
+    margin-left: 36px;
+    margin-bottom: 0px
+    
 }
 
 
 .properties-title {
     @extend .properties;
     color: white;
-    font-weight: 600;
-    font-family: 'Robotto';
-
+    margin-bottom: 0px;
+    font-weight: 700;
+    font-family: 'Montserrat';
+    
 }
 
 .properties-info {
     @extend .properties;
     font-family: 'Montserrat';
-    color: rgba(255, 255, 255, 0.785);
+    margin-bottom: 64px;
+    font-weight: 400;
+    color: white;
+
+}
+.properties-main {
+    @extend .properties;
+    font-family: 'Montserrat';
+    font-weight: 400;
+    color: white;
 
 }
 
 .properties-total {
     @extend .properties;
     color: white;
-    font-weight: 600;
-    font-family: 'Robotto';
-    margin-top: 100px;
+    font-weight: 700;
+    font-size: 20px;
+    font-family: 'Montserrat';
+    margin-top: 32px;
 }
 
 .properties-price {
