--- a/Client/Website/src/app/pages/guest/profile/profile.component.scss
+++ b/Client/Website/src/app/pages/guest/profile/profile.component.scss
@@ -3,10 +3,18 @@
     background-color: white;
     position: absolute;
     text-transform: uppercase;
+    border-color: transparent;
+    font-family: 'Roboto';
+}
+
+.main-button:hover {
+
+    background-color: lightgray
 }
 
 .edit-button {
     @extend .main-button;
+    font-size: 18px;
     top: 20%;
     height: 60px;
     width: 200px;
@@ -16,6 +24,7 @@
 
 .change-pass-button {
     @extend .main-button;
+    font-size: 18px;
     top: 20%;
     height: 60px;
     width: 230px;
@@ -24,11 +33,14 @@
 
 .promo-code-button {
     @extend .main-button;
+    font-size: 24px;
+    line-height: 50px;
     margin-top: 16px;
-    height: 60px;
-    width: 230px;
-    right: 45%;
-    left: 42%;
+    height: 10%;
+    width: 20%;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .user {
@@ -41,14 +53,32 @@
 }
 
 .page-titles {
+
+    margin-left: 32px;
+    margin-right: 32px;
     color: white;
-    font-family: 'Robotto';
+    font-family: 'Abhaya Libre';
     font-weight: 400;
     text-transform: uppercase;
-    margin-left: 20px;
+}
+
+.divider {
+
+    margin-left: 32px;
+    width: 96%;
+    margin-right: 32px;
+
+}
+
+.main-divider {
+
+    align-self: center;
+    width: 25%;
+    margin: 0 auto
 }
 
 .order-img {
+    z-index: 0;
     display: inline-block;
     width: 100%;
     height: 80%;
@@ -58,7 +88,7 @@
     margin-top: 100px;
     align-content: start;
     width: 100%;
-    overflow-x: auto;
+    overflow-x: hidden;
 }
 
 
@@ -67,10 +97,45 @@
     flex-wrap: nowrap;
 }
 
-.order-title{
-    
+.order-title {
+
+    font-family: 'Abhaya Libre';
+    font-size: 28px;
     color: white;
+    margin: 8px;
     font-weight: 400;
     text-align: center;
-    
+
+}
+
+.wrap {
+
+    position: relative;
+}
+
+.wrap img {
+
+    display: block;
+    height: auto;
+    width: 100%;
+    z-index: 1;
+}
+
+.wrap::before {
+
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba($color: #dddddd, $alpha: 0.2);
+
+}
+
+.wrap:hover::before {
+
+
+    background-color: transparent;
+
 }
