Tweaked some Changes🗄
1. Complete Registration Database Page
2. 10
3. Made some changes and fixed errors.

--- a/Client/Website/src/app/pages/admin/registration-database/registration-database.component.html
+++ b/Client/Website/src/app/pages/admin/registration-database/registration-database.component.html
@@ -1,2 +1,2 @@
 <app-nav-bar></app-nav-bar>
-<p>registration-database works!</p>
+<app-database [data_injection]="data_injection" [change_injection]="change_injection" ></app-database>
