Made some Changes🗄
1. Complete Registration Database Page
2. 10
3. Made some changes.

--- a/Client/Website/src/app/components/activity/activity-list-item/activity-list-item.component.html
+++ b/Client/Website/src/app/components/activity/activity-list-item/activity-list-item.component.html
@@ -56,18 +56,18 @@
                 <p *ngIf="seats!=0" class="content-1">
                     Total:
                 </p>
-                <p class="content-2">
+                <!-- <p class="content-2">
                     {{formatTotalPrice}}
-                </p><br>
+                </p><br> -->
                 <table style="padding: 0px; width: 100%;">
                     <tr>
                         <td style="width: 50%;">
                             <p class="title-2">
-                                <!-- {{formatTotalPrice}} -->
+                                {{formatTotalPrice}}
                             </p>
                         </td>
                         <td>
-                            <p class="cancel-btn">
+                            <p class="cancel-btn" (click)="register()">
                                 Register
                             </p>
                         </td>
