Worked on Registration🗄
1. Complete Registration Database Page
2. 10
3. Worked on activity registration.

--- a/Client/Website/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/Client/Website/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,4 +1,4 @@
-<table class="footer">
+<!-- <table class="footer">
 
   <div class="row">
     <div class="col-md-3">
@@ -44,4 +44,4 @@
 </div>
 
       
-</table>
+</table> -->
