--- a/Client/Website/src/app/pages/guest/services/browse/browse-services.component.html
+++ b/Client/Website/src/app/pages/guest/services/browse/browse-services.component.html
@@ -21,24 +21,13 @@
             style="margin-right: 64px; margin-left: 64px; margin: 16px; border-top-color: #14274a40"></mat-divider>
     </div>
 </div>
-<!-- <app-carousel>
-    <ng-container *ngFor="let activity of activities | keyvalue; let i = index">
-        <ng-container *carouselItem>
-            <app-activity-list-item style="width: 100%;
-    display: flex;
-    position: relative;" [@fadeOut] [end_date]="activity.value.end_date" [start_date]="activity.value.start_date"
-                [activity]="activity"
-                ></app-activity-list-item>
-        </ng-container>
-    </ng-container>
-</app-carousel> -->
 
+<!-- 
 <app-carousel #carousel>
     <ng-container *ngFor="let activity of activities | keyvalue; let i = index">
         <ng-container *carouselItem>
             <app-activity-list-item style="width: 100%; display: flex; position: relative;" 
-            [@fadeOut] [end_date]="activity.value.end_date" [start_date]="activity.value.start_date"
-            [activity]="activity" ></app-activity-list-item>
+            [@fadeOut] [activity]="activity" ></app-activity-list-item>
         </ng-container>
     </ng-container>
-</app-carousel>
+</app-carousel> -->
