--- a/Client/Website/src/app/pages/guest/services/browse/browse-services.component.html
+++ b/Client/Website/src/app/pages/guest/services/browse/browse-services.component.html
@@ -22,6 +22,11 @@
     </div>
 </div>
 
+<p class="header">Facilities</p>
+<mat-divider style="margin-right: 64px;margin-left: 64px;margin-bottom: 16px; border-top-color: #14274A"></mat-divider>
+<p class="sub-header">We want your stay at our lush hotel to be truly unforgettable.  That is why we give special attention to all of your needs so 
+    that we can ensure an experience quite unique. Luxury hotels offers the perfect setting with stunning views for leisure
+    and our modern luxury resort facilities will help you enjoy the best of all.  </p>
 <!-- 
 <app-carousel #carousel>
     <ng-container *ngFor="let activity of activities | keyvalue; let i = index">
