--- a/Client/Website/src/app/components/facility/facility.component.html
+++ b/Client/Website/src/app/components/facility/facility.component.html
@@ -6,7 +6,7 @@
     </tr>
     <tr>
         <td style="padding: 16px; height:80vh;">
-            <img style="vertical-align: middle; object-fit: cover;" width="100%" height="100%" src="../../../assets/facility-1.jpg">
+            <img style="vertical-align: middle; object-fit: cover;" width="100%" height="100%" src="../../../assets/facility-1.png">
         </td>
         <td style="padding: 16px; height: 80vh;  width: 40%; resize: none;">
             <div style="vertical-align: middle;  margin: 0px;">
