--- a/Client/Website/src/app/pages/guest/services/browse/browse-services.component.html
+++ b/Client/Website/src/app/pages/guest/services/browse/browse-services.component.html
@@ -24,9 +24,19 @@
 
 <p class="header">Facilities</p>
 <mat-divider style="margin-right: 64px;margin-left: 64px;margin-bottom: 16px; border-top-color: #14274A"></mat-divider>
-<p class="sub-header">We want your stay at our lush hotel to be truly unforgettable.  That is why we give special attention to all of your needs so 
-    that we can ensure an experience quite unique. Luxury hotels offers the perfect setting with stunning views for leisure
-    and our modern luxury resort facilities will help you enjoy the best of all.  </p>
+<p class="sub-header">We want your stay at our lush hotel to be truly unforgettable. That is why we give special
+    attention to all of your needs so
+    that we can ensure an experience quite unique. Luxury hotels offers the perfect setting with stunning views for
+    leisure
+    and our modern luxury resort facilities will help you enjoy the best of all. </p>
+
+<div style="display: flex; flex-wrap: wrap;">
+    <div *ngFor="let facility of facilities | keyvalue" style="width: 50%;">
+        <app-facility class="item" [facility]="facility"></app-facility>
+        <mat-divider
+            style="margin-right: 64px; margin-left: 64px; margin: 16px; border-top-color: #14274a40"></mat-divider>
+    </div>
+</div>
 <!-- 
 <app-carousel #carousel>
     <ng-container *ngFor="let activity of activities | keyvalue; let i = index">
