--- a/Client/Website/src/app/components/database/change/change.component.html
+++ b/Client/Website/src/app/components/database/change/change.component.html
@@ -36,6 +36,97 @@
                             </td>
                         </tr>
                     </ng-container>
+                    <ng-container *ngIf="side_panel == 'table' && table">
+
+                        
+
+                        <table mat-table [dataSource]="table.data" style="width: 10%; margin: 32px;">
+
+                            <ng-container *ngFor="let col of table.columns">
+
+                                <ng-container *ngIf="!col || col.type === 'text'"
+                                    [matColumnDef]="col.key">
+                                    <th mat-header-cell *matHeaderCellDef>
+                                        {{col.header_alt || formatWord(col.key)}}
+                                    </th>
+
+                                    <td class="cell" mat-cell *matCellDef="let element">
+                                        <!-- <mat-form-field class="full-width input"> -->
+                                            <input [disabled]="!modification_rule(this.data)"
+                                                class="input" type="number"
+                                                [ngModel]="formatTableData(element, col.key)"
+                                                (ngModelChange)="updateData(col.key, element, $event)"
+                                                matInput>
+                                            <div class="number-error"
+                                                *ngIf="!formatTableData(element, col.key)">
+                                                Please enter a valid number </div>
+                                        <!-- </mat-form-field> -->
+
+                                    </td>
+
+                                </ng-container>
+                            </ng-container>
+
+                            <ng-container *ngFor="let col of table.columns">
+
+                                <ng-container
+                                    *ngIf="col.type === 'selection' && col.outer_link && outer_data"
+                                    [matColumnDef]="col.key">
+                                    <th mat-header-cell *matHeaderCellDef>
+                                        {{col.header_alt || formatWord(col.key)}}
+                                    </th>
+
+                                    <td class="cell" mat-cell *matCellDef="let element">
+
+                                        <!-- <mat-form-field class="full-width input"> -->
+
+                                            <mat-select class="input"
+                                                [ngModel]="formatTableData(element, col.key)"
+                                                (ngModelChange)="updateData(col.key, element, $event)">
+                                                <mat-option
+                                                    [disabled]="!modification_rule(this.data)"
+                                                    class="input"
+                                                    *ngFor="let type of outer_data[col.outer_link.index]| keyvalue"
+                                                    [value]="type.key">
+                                                    {{col.outer_link.format(type)}}
+                                                </mat-option>
+
+                                            </mat-select>
+                                        <!-- </mat-form-field> -->
+                                    </td>
+
+                                </ng-container>
+                            </ng-container>
+
+
+                            <ng-container [matColumnDef]="'buttons'">
+                                <th mat-header-cell *matHeaderCellDef>
+                                    {{'quick_actions' | translate}} </th>
+                                <td class="cell" mat-cell *matCellDef="let element; let i = index"
+                                    style="padding-left: 0px;">
+
+                                    <button (click)="deleteData(i)" class="quick-btn"
+                                        mat-button>{{'delete' | translate}}</button>
+
+                                </td>
+                            </ng-container>
+
+
+                            <tr mat-header-row
+                                *matHeaderRowDef="getDisplayedColumnsKey; sticky: true">
+                            </tr>
+                            <tr mat-row *matRowDef="let row; columns: getDisplayedColumnsKey;">
+                            </tr>
+
+
+                        </table>
+
+                        <button class="back-btn" (click)="pushData()" mat-button>Add Entry</button>
+
+                        
+
+
+                    </ng-container>
                     <ng-container *ngIf="side_panel == 'permissions' && permissions">
 
                         <table style="table-layout: fixed;">
@@ -95,16 +186,17 @@
                             <!-- Raw Text -->
                             <mat-form-field *ngIf="field.type === 'text'" class="full-width input">
                                 <mat-label class="label">{{formatLabel(field.key)}}</mat-label>
-                                <input [disabled]="!modification_rule(this.data)" class="input"
-                                    [(ngModel)]="data[field.key]" matInput>
+                                <input [disabled]="field.readonly || !modification_rule(this.data)"
+                                    class="input" [(ngModel)]="data[field.key]" matInput>
                             </mat-form-field>
 
                             <!-- Number -->
                             <mat-form-field *ngIf="field.type === 'number'"
                                 class="full-width input">
                                 <mat-label class="label">{{formatLabel(field.key)}}</mat-label>
-                                <input [disabled]="!modification_rule(this.data)" class="input"
-                                    type="number" [(ngModel)]="data[field.key]" matInput>
+                                <input [disabled]="field.readonly || !modification_rule(this.data)"
+                                    class="input" type="number" [(ngModel)]="data[field.key]"
+                                    matInput>
                                 <div class="number-error"
                                     *ngIf="field.condition && data[field.key] ? !field.condition(data[field.key]) : false">
                                     Please enter a valid number </div>
@@ -116,7 +208,7 @@
                                 class="full-width input"
                                 [color]="data[field.key] && !isNum(data[field.key].toString()) ? 'warn' : 'primary'">
                                 <mat-label class="label">{{formatLabel(field.key)}}</mat-label>
-                                <input [disabled]="!modification_rule(this.data)"
+                                <input [disabled]="field.readonly || !modification_rule(this.data)"
                                     [min]="field.type === 'positive_digits_string' ? 0 : -999999"
                                     class="input" [(ngModel)]="data[field.key]" matInput>
                                 <div class="number-error"
@@ -132,7 +224,8 @@
                                 <mat-select [multiple]="field.type === 'choices'" class="input"
                                     [ngModel]="data[field.key]"
                                     (ngModelChange)="data[field.key]=$event">
-                                    <mat-option [disabled]="!modification_rule(this.data)"
+                                    <mat-option
+                                        [disabled]="field.readonly || !modification_rule(this.data)"
                                         class="input" *ngFor="let type of field.choices.choices"
                                         [value]="field.choices.key ? field.choices.key(type) : type[0]">
                                         {{field.choices.format ? (field.choices.format(type[1]) |
@@ -149,7 +242,8 @@
                                 <mat-select [multiple]="field.type === 'choices'" class="input"
                                     [ngModel]="data[field.key]"
                                     (ngModelChange)="data[field.key]=$event">
-                                    <mat-option [disabled]="!modification_rule(this.data)"
+                                    <mat-option
+                                        [disabled]="field.readonly || !modification_rule(this.data)"
                                         class="input" *ngFor="let type of linked_data | keyvalue"
                                         [value]="field.choices.key ? field.choices.key([type.key, type.value]) : type.key">
                                         {{field.choices.format ? field.choices.format(type.value) :
@@ -167,12 +261,15 @@
                                     [multiple]="field.type === 'outer_choices'" class="input"
                                     [ngModel]="data[field.key]"
                                     (ngModelChange)="data[field.key]=$event">
-                                    <mat-option [disabled]="!modification_rule(this.data)"
+                                    <mat-option
+                                        [disabled]="field.readonly || !modification_rule(this.data)"
                                         class="input"
                                         *ngFor="let type of outer_data[field.outer_choices.index!] | keyvalue"
                                         [value]="field.outer_choices.key ? field.outer_choices.key([type.key, type.value]) : type.key">
                                         {{formatOuterChoice(field, type)}}
-                                    </mat-option> </mat-select>
+                                    </mat-option>
+
+                                </mat-select>
                             </mat-form-field>
 
                             <!-- Date -->
