--- a/Client/Website/src/app/components/database/change/change.component.scss
+++ b/Client/Website/src/app/components/database/change/change.component.scss
@@ -70,6 +70,16 @@
     background: #4668a6;
 }
 
+th {
+
+    font-family: 'Roboto' !important;
+    text-align: center;
+    background-color: #14274A !important;
+    color: white;
+    font-weight: 400;
+
+}
+
 .content {
 
     padding: 16px;
